# movie_db_gui

./: .gitignore  Cargo.toml  README.md  autoscan.md  bugfixes.md  install-desktop.sh  main.rs  movie-database.desktop  movies.db  uninstall-desktop.sh
src/: main.rs
