[package]
name = "movie-database"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
gdk-pixbuf = "0.18"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
async-channel = "2.3"
